--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.21.0"
+colored = "2.0.0"
 reqwest = { version = "0.11.16", features = ["blocking", "json"] }
 serde_json = "1.0.96"
