--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 base64 = "0.21.0"
 colored = "2.0.0"
 reqwest = { version = "0.11.16", features = ["blocking", "json"] }
+serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
