--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ colored = "2.0.0"
 reqwest = { version = "0.11.16", features = ["blocking", "json"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
+serde_with = "3.0.0"
