--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.94"
 base64 = "0.21.0"
+clap = { version = "4.5.23", features = ["derive"] }
 colored = "2.0.0"
 reqwest = { version = "0.11.16", features = ["blocking", "json"] }
 serde = { version = "1.0.164", features = ["derive"] }
