--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.21.0"
 clap = { version = "4.5.23", features = ["derive"] }
 colored = "2.0.0"
 reqwest = { version = "0.11.16", features = ["blocking", "json"] }
+rpassword = "7.3.1"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.96"
 serde_with = "3.0.0"
